--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "homebridge": ">=0.4.5"
   },
   "dependencies": {
+    "api-quick": "^0.3.3",
     "googleapis": ">=39.1.0",
     "ip": "^1.1.3",
     "debug": "^2.2.0"
